--- a/SignalRServer/SignalRServer.csproj
+++ b/SignalRServer/SignalRServer.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.SignalR.Protocols.MessagePack" Version="7.0.5" />
   </ItemGroup>
 
 </Project>
